--- a/summerhayesScouting/index.html
+++ b/summerhayesScouting/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="fixtures.html">Fixtures</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#salah">Salah</a>
+                <a class="nav-link" href="#salah">Mo Salah</a>
             </li>
         </ul>
     </nav>
