new favicon added

--- a/summerhayesScouting/index.html
+++ b/summerhayesScouting/index.html
@@ -11,6 +11,7 @@
 
     <!-- Custom CSS -->
     <link href="resources/css/homePage.css" rel="stylesheet">
+    <link rel="shortcut icon" href="resources/images/lfc.png">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                 <a class="nav-link" href="predictor.html">Predictor</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="table.html">Tables</a>
+                <a class="nav-link" href="table.html">Live Tables</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="fixtures.html">Fixtures</a>
