--- a/summerhayesScouting/fixtures.html
+++ b/summerhayesScouting/fixtures.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="predictor.html">Predictor</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="table.html">Tables</a>
+                <a class="nav-link" href="table.html">Live Tables</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="fixtures.html">Fixtures</a>
